# SIGPytch

./: .gitignore  LICENSE  README.md  pyproject.toml
PCA/: data_copy.xlsx  fund_stats_all.xlsx  sig_pca.ipynb
sigpytch/: forecaster.py  forecasters.py  metrics.py  periods.py
tests/: autoDCF.py  refinitiv-data.config.json  test_metrics.py  test_refinitiv  test_refinitiv.py
